tests/__snapshots__/validation-failFast-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'failFast' option must be a boolean.

  1 | {
  2 |   "failFast": "never",
    |               ~~~~~~~
  3 |   "target": [
  4 |     "latest"
  5 |   ]

      at ./tstyche.config.json:2:15

